# Ultimate-Raspberry-Pi-Setup

./: README.md
NginxProxyManager/: docker-compose.yml
cockpit/: install.sh
docker/: install.sh
docmost/: docker-compose.yml
filebrowser/: compose.yaml  install.sh
glances/: docker-compose.yml
glances/config/: home.yml
grafana/: install.sh
homarr/: docker-compose.yml
influxdb/: install.sh
karakeep/: .env  docker-compose.yml
mcp/: install.sh  mcp-server.service  pyproject.toml  requirements.txt
mcp/src/mcp_server_on_raspi/: __init__.py  server.py
nextcloud/: docker-compose.yml
pi-hole/: install.sh
pivpn/: install.sh
portainer/: install.sh
qbittorrent/: docker-compose.yml
